# aoc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
benches/: aoc.rs
inputs/2018/05/: 01.json  02.json
inputs/2024/01/: 01.json  02.json
inputs/2024/02/: 01.json  02.json
inputs/2024/03/: 01.json  02.json
inputs/2024/04/: 01.json  02.json
puzzles.enc/2015/01/: meta.toml.enc
puzzles.enc/2015/01-1/: meta.toml.enc  test_1.in.enc  test_1.out.enc  test_10.in.enc  test_10.out.enc  test_2.in.enc  test_2.out.enc  test_3.in.enc  test_3.out.enc  test_4.in.enc  test_4.out.enc  test_5.in.enc  test_5.out.enc  test_6.in.enc  test_6.out.enc  test_7.in.enc  test_7.out.enc  test_8.in.enc  test_8.out.enc  test_9.in.enc  test_9.out.enc
puzzles.enc/2015/01-2/: meta.toml.enc  test_1.in.enc  test_1.out.enc  test_2.in.enc  test_2.out.enc  test_3.in.enc  test_3.out.enc
puzzles.enc/2018/05/: meta.toml.enc
puzzles.enc/2018/05-1/: meta.toml.enc  test_1.in.enc  test_1.out.enc  test_2.in.enc  test_2.out.enc
puzzles.enc/2018/05-2/: meta.toml.enc  test_1.in.enc  test_1.out.enc  test_2.in.enc  test_2.out.enc
puzzles.enc/2024/01/: meta.toml.enc
puzzles.enc/2024/01-1/: meta.toml.enc  test_1.in.enc  test_1.out.enc  test_2.in.enc  test_2.out.enc
puzzles.enc/2024/01-2/: meta.toml.enc  test_1.in.enc  test_1.out.enc  test_2.in.enc  test_2.out.enc
puzzles.enc/2024/02-1/: meta.toml.enc  test_1.in.enc  test_1.out.enc  test_2.in.enc  test_2.out.enc
puzzles.enc/2024/02-2/: meta.toml.enc  test_1.in.enc  test_1.out.enc  test_2.in.enc  test_2.out.enc
src/: cipher.rs  input_storage.rs  lib.rs  main.rs
src/api/: mod.rs
src/cli/: decrypt.rs  download.rs  encrypt.rs  mod.rs  solve.rs
src/storage/: cipher.rs  mod.rs  operations.rs
src/years/: mod.rs
tests/: solutions.rs
(+430 files in other folders)
