[package]
name = "aoc"
version = "0.1.0"
edition = "2024"
publish = false
build = "build/build.rs"

[dependencies]
aes-gcm-siv = "0.11"
argon2 = "0.5"
blake3 = "1.6"
clap = { version = "4.5", features = ["cargo"] }
glob = "0.3"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
paste = "1.0"
quickcheck = "1.0"
quickcheck_macros = "1.0"
