[package]
name = "aoc"
version = "0.1.0"
edition = "2024"
publish = false
repository = "https://github.com/LimeEng/aoc/"
build = "build/build.rs"

[dependencies]
aes-gcm-siv = "0.11"
blake3 = "1.8"
clap = { version = "4.5", features = ["cargo"] }
inquire = "0.9"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["local-offset", "macros", "serde-human-readable"] }
toml = "0.9"
walkdir = "2.5"

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.1"

[build-dependencies]
walkdir = "2.5"
